# cosmicfishpie

./: .all-contributorsrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  MANIFEST.in  Makefile  README.md  RELEASE_PROCESS.md  pyproject.toml  pytest.ini  requirements.txt
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/actions/setup-venv/: action.yml
.github/workflows/: ci.yml  main.yml  pr_checks.yml
boltzmann_yaml_files/camb/: default.yaml
boltzmann_yaml_files/class/: fast_photo-hmcode.yaml  fast_photo.yaml  fast_spectro.yaml
cosmicfishpie/: __init__.py  version.py
cosmicfishpie/CMBsurvey/: CMB_cov.py  CMB_obs.py  __init__.py
cosmicfishpie/LSSsurvey/: __init__.py  photo_cov.py  photo_obs.py  photo_window.py  spectro_cov.py  spectro_obs.py
cosmicfishpie/analysis/: __init__.py  colors.py  fishconsumer.py  fisher_derived.py  fisher_matrix.py  fisher_operations.py  fisher_plot_analysis.py  fisher_plotting.py  plot_comparison.py  utilities.py
cosmicfishpie/configs/: config.py  install_external_data.py
cosmicfishpie/cosmology/: __init__.py  cosmology.py  nuisance.py
cosmicfishpie/fishermatrix/: __init__.py  config.py  cosmicfish.py  derivatives.py
cosmicfishpie/likelihood/: __init__.py  base.py  photo_like.py  sampler.py  spectro_like.py
cosmicfishpie/utilities/: __init__.py  legendre_tools.py  utils.py
coverage_reports/: d_0b9a179574906bf2___init___py.html  d_0b9a179574906bf2_utils_py.html  d_3dae116047d36a70___init___py.html  d_3dae116047d36a70_cosmology_py.html  d_3dae116047d36a70_nuisance_py.html  d_79b1cfaaaf2f2072___init___py.html  d_79b1cfaaaf2f2072_cosmicfish_py.html  d_79b1cfaaaf2f2072_derivatives_py.html  d_880f2286a0b6255e_config_py.html  d_966e3767c24e4d72___init___py.html  d_966e3767c24e4d72_colors_py.html  d_966e3767c24e4d72_fishconsumer_py.html  d_966e3767c24e4d72_fisher_derived_py.html  d_966e3767c24e4d72_fisher_matrix_py.html  d_966e3767c24e4d72_fisher_operations_py.html  d_966e3767c24e4d72_fisher_plot_analysis_py.html  d_966e3767c24e4d72_fisher_plotting_py.html  d_966e3767c24e4d72_plot_comparison_py.html  d_966e3767c24e4d72_utilities_py.html  d_cae2ff9ddba37f18___init___py.html  d_cae2ff9ddba37f18_photo_cov_py.html  d_cae2ff9ddba37f18_photo_obs_py.html  d_cae2ff9ddba37f18_photo_window_py.html  d_cae2ff9ddba37f18_spectro_cov_py.html  d_cae2ff9ddba37f18_spectro_obs_py.html  d_cb317af7c0aea122___init___py.html  d_cb317af7c0aea122_version_py.html  d_f235191d3ea6f709_CMB_cov_py.html  d_f235191d3ea6f709_CMB_obs_py.html  d_f235191d3ea6f709___init___py.html  index.html  status.json
docs/source/: README.rst  api.rst  cmb_benchmarks.md  conf.py  cosmicfishpie.CMBsurvey.rst  cosmicfishpie.LSSsurvey.rst  cosmicfishpie.analysis.rst  cosmicfishpie.cosmology.rst  cosmicfishpie.fishermatrix.rst  cosmicfishpie.rst  cosmicfishpie.utilities.rst  index.md  installation.md  modules.rst  overview.md
notebooks/: 1-Cosmology-Calculator.ipynb  2-Photometric_probes-tutorial copy.ipynb  2-Photometric_probes-tutorial.ipynb  3-Spectroscopic_probes-tutorial.ipynb  4-Plot_analyze_chains_example.ipynb  5-Plot_analyze_chains_tutorial.ipynb  6-Euclid-Planck-combined-Fisher.ipynb  7-Planck-covmat-noise-diagnostics.ipynb  Cosmology-Calculator-Symbolic.ipynb  Cosmology-Calculator.ipynb  Example-Fisher_Various_Survey_Specifications.ipynb  Example_Fisher-GCsp-CLASS-Euclid.ipynb  Example_Fisher-WL_3x2photo-CAMB-Euclid.ipynb  Example_Fishers-Various_Surveys-DESI-Rubin-Euclid.ipynb  GCsp_presentation.ipynb  SKAO_presentation.ipynb  likelihod_GCsp_clean.ipynb  likelihod_photometric-Debole-CAMB.py  likelihod_photometric-Debole.py  likelihod_photometric.ipynb  likelihod_photometric.py  likelihod_photometric_module-GW.ipynb  likelihod_spectroscopic.ipynb  likelihod_spectroscopic.py  plot_jelly_chains.ipynb
notebooks/legacy/: likelihod_photometric_module.ipynb
notebooks/old/: Cosmology-Calculator-Symbolic-CF-Tests.ipynb  DR1+Meerklass_presentation.ipynb  Example_Fisher-WL_3x2photo-Symbolic-Euclid.ipynb  Public-Nbs_3-external-GCSpec-Euclid-Fishermatrix-FINAL.ipynb  likelihod_photometric-Debole-CAMB.py  likelihod_photometric-Debole.ipynb
sampler_scripts/: darkenergy_desi_config.yaml  darkenergy_lcdm_config.yaml  darkenergy_lcdm_highH0_config.yaml  run_sampler.py
scripts/: README.md  add_scalar_prior_to_fisher.py  compare_backends_report.sh  compare_fishers_in_dir.py  compare_planck_published.py  package_benchmarks.py  photometric_benchmark.py  plot-style.txt  plot_compare_fishers.py  plot_planck_covmat_vs_fisher.py  prepare_changelog.py  release.sh  render_compare_reports.py  run_cmb_benchmarks.py  run_cmb_fisher_smoke.py  run_fisher_compare_backends.py  run_planck_bestfit_fisher.py  run_planck_diagnostics_suite.sh  validate_many_compare_configs.sh
scripts/validation_configs/: common_specs_LCDM.json  common_specs_nuCDM.json  common_specs_w0waCDM.json  compare_run_config.env.example  (+6 more)
survey_specifications/: DESI-Optimistic.yaml  Euclid-ISTF-Optimistic.yaml  Euclid-ISTF-Pessimistic-ql.yaml  Euclid-ISTF-Pessimistic.yaml  Euclid-ISTF-Superpessimistic.yaml  Euclid-Photometric-ISTF-Pessimistic.yaml  Euclid-Spectroscopic-ISTF-Pessimistic.yaml  Planck.yaml  Rubin-Optimistic.yaml  Rubin-Pessimistic.yaml  SKA1-IM-z_Pnoise.txt  SKA1-Redbook-Optimistic.yaml  SKA1-Redbook-Pessimistic.yaml  SKA1_THI_sys_noise.txt
tests/: analysis_test.py  colors_test.py  config_test.py  conftest.py  cosmicfish_test.py  cosmicfish_test_photo.py  derivatives_test.py  fishconsumer_test.py  fisher_derived_test.py  fisher_operations_extra_test.py  fisher_plot_analysis_test.py  installation_test.py  legendre_tools_test.py  likelihood_base_test.py  nuisance_test.py  package_data_test.py  photo_cov_extra_test.py  photo_cov_test.py  photo_like_test.py  photo_obs_test.py  reference_spectro_obs_edge_cases.py  spectro_cov_test.py  spectro_like_test.py  spectro_obs_test.py  test_fishconsumer.py  test_photo_like.py  test_spectro_like.py  test_utils.py  utils_extra_test.py  utils_test.py
(+31 files in other folders)
